Fix (TextArea): images do not fit the box of the editor in readOnly mode

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -1214,3 +1214,11 @@ div[read-only="true"] {
     }
   }
 }
+
+
+.formio-editor-read-only-content {
+  img {
+    max-width: 100%;
+  }
+}
+
